配置优化；安全调整